--- a/sass/components/_products.scss
+++ b/sass/components/_products.scss
@@ -8,22 +8,12 @@
     }
     &__wrapper {
         position: absolute;
+        padding: 27px 0 27px 0;
         left: 0;
         bottom: 0;
         width: 100%;
         text-align: center;
         background: rgba(47, 48, 58, 0.8);
-    }
-    &__title {
-        display: inline-block;
-        padding-top: 27px;
-        padding-bottom: 27px;
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: $generalColor;
     }
 }
 .product__item:not(:last-child) {
