--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,3 +7,5 @@
 @import './components/features';
 @import './components/products';
 @import './components/our-team';
+@import './components/clients';
+@import './components/footer';
