--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import './components/header';
 @import './components/hero';
 @import './components/modal';
+@import './components/checkbox';
 @import './components/features';
 @import './components/products';
 @import './components/our-team';
