--- a/sass/utils/_common-styles.scss
+++ b/sass/utils/_common-styles.scss
@@ -46,7 +46,14 @@ ul {
         color: $accentColor;
     }
 }
+.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
 .button {
+    text-align: center;
+    vertical-align: middle;
     border-radius: 4px;
     padding: 10px 32px;
     border: 0;
