reused header and footer from index

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,4 @@
 @import './components/our-team';
 @import './components/clients';
 @import './components/footer';
+@import './components/portfolio/filters';
