--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,4 @@
 @import './components/clients';
 @import './components/footer';
 @import './components/portfolio/filters';
+@import './components/portfolio/card-set';
