--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -8,7 +8,7 @@
     margin-right: auto;
     margin-left: auto;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../../images/hero-back.jpg');
+        url('/images/hero-back.jpg');
     background-repeat: no-repeat;
     background-position: center;
 
