--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -5,34 +5,33 @@
     display: flex;
     text-align: center;
 
-    &__item:not(:last-child) {
-        margin-right: 30px;
-    }
-
-    &__item {
+    .team-list__item {
         background-color: var(--white-color);
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
             0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
+        &:not(:last-child) {
+            margin-right: 30px;
+        }
     }
-    &__image {
+    .team-list__image {
         display: block;
     }
-    &__card {
+    .team-list__card {
         padding-top: 30px;
         padding-bottom: 30px;
     }
-    &__title,
-    &__text {
+    .team-list__title,
+    .team-list__text {
         font-size: 16px;
         line-height: 1.19;
     }
-    &__title {
+    .team-list__title {
         margin-bottom: 10px;
         font-weight: 500;
         color: $mainTitleColor;
     }
-    &__text {
+    .team-list__text {
         margin-bottom: 16px;
     }
 }
@@ -41,11 +40,11 @@
     display: flex;
     justify-content: center;
 
-    &__item:not(:last-child) {
+    .social-media__item:not(:last-child) {
         margin-right: 10px;
     }
 
-    &__link {
+    .social-media__link {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -62,7 +61,7 @@
         }
     }
 
-    &__icon {
+    .social-media__icon {
         display: block;
         fill: currentColor;
     }
