--- a/css/main.css
+++ b/css/main.css
@@ -403,11 +403,11 @@ ul {
   margin-bottom: -1px;
 }
 
-.site-nav__item:not(:last-child) {
+.site-nav .site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.site-nav__link {
+.site-nav .site-nav__link {
   display: block;
   padding-top: 32px;
   color: #212121;
@@ -418,15 +418,15 @@ ul {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav__link:hover, .site-nav__link:focus {
+.site-nav .site-nav__link:hover, .site-nav .site-nav__link:focus {
   color: #2196f3;
 }
 
-.site-nav__link--activ {
+.site-nav .site-nav__link--activ {
   color: #2196f3;
 }
 
-.site-nav__link--activ::after {
+.site-nav .site-nav__link--activ::after {
   content: '';
   display: block;
   width: 100%;
@@ -443,11 +443,11 @@ ul {
   margin-left: auto;
 }
 
-.contacts__item:not(:last-child) {
+.contacts .contacts__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.contacts__link {
+.contacts .contacts__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -465,12 +465,12 @@ ul {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts__link:hover, .contacts__link:focus {
+.contacts .contacts__link:hover, .contacts .contacts__link:focus {
   color: #2196f3;
   fill: #2196f3;
 }
 
-.contacts__icon {
+.contacts .contacts__icon {
   margin-right: 10px;
   fill: currentColor;
 }
@@ -490,7 +490,7 @@ ul {
   background-position: center;
 }
 
-.hero__title {
+.hero .hero__title {
   margin: 0 auto 30px auto;
   color: #ffffff;
   font-weight: 900;
@@ -713,21 +713,21 @@ ul {
   padding-top: 94px;
 }
 
-.features__list {
+.features .features__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.features__item {
+.features .features__item {
   width: 270px;
 }
 
-.features__item:not(:last-child) {
+.features .features__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.features__logo {
+.features .features__logo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -743,7 +743,7 @@ ul {
   margin-bottom: 30px;
 }
 
-.features__title {
+.features .features__title {
   margin-bottom: 10px;
   font-size: 14px;
   color: #212121;
@@ -751,7 +751,7 @@ ul {
   text-transform: uppercase;
 }
 
-.features__text {
+.features .features__text {
   line-height: 1.71;
 }
 
@@ -761,15 +761,19 @@ ul {
   display: flex;
 }
 
-.product__item {
+.product .product__item {
   position: relative;
 }
 
-.product__image {
+.product .product__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.product .product__image {
   display: block;
 }
 
-.product__wrapper {
+.product .product__wrapper {
   position: absolute;
   padding: 27px 0 27px 0;
   left: 0;
@@ -777,10 +781,6 @@ ul {
   width: 100%;
   text-align: center;
   background: rgba(47, 48, 58, 0.8);
-}
-
-.product__item:not(:last-child) {
-  margin-right: 30px;
 }
 
 .section--highlight {
@@ -794,38 +794,39 @@ ul {
   text-align: center;
 }
 
-.team-list__item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.team-list__item {
+.team-list .team-list__item {
   background-color: var(--white-color);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-list__image {
+.team-list .team-list__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.team-list .team-list__image {
   display: block;
 }
 
-.team-list__card {
+.team-list .team-list__card {
   padding-top: 30px;
   padding-bottom: 30px;
 }
 
-.team-list__title, .team-list__text {
+.team-list .team-list__title,
+.team-list .team-list__text {
   font-size: 16px;
   line-height: 1.19;
 }
 
-.team-list__title {
+.team-list .team-list__title {
   margin-bottom: 10px;
   font-weight: 500;
   color: #212121;
 }
 
-.team-list__text {
+.team-list .team-list__text {
   margin-bottom: 16px;
 }
 
@@ -838,11 +839,11 @@ ul {
           justify-content: center;
 }
 
-.social-media__item:not(:last-child) {
+.social-media .social-media__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.social-media__link {
+.social-media .social-media__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -860,12 +861,12 @@ ul {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-media__link:hover, .social-media__link:focus {
+.social-media .social-media__link:hover, .social-media .social-media__link:focus {
   background-color: #2196f3;
   color: #ffffff;
 }
 
-.social-media__icon {
+.social-media .social-media__icon {
   display: block;
   fill: currentColor;
 }
@@ -876,11 +877,11 @@ ul {
   display: flex;
 }
 
-.client-list__item:not(:last-child) {
+.client-list .client-list__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.client-list__link {
+.client-list .client-list__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -899,12 +900,12 @@ ul {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client-list__link:hover, .client-list__link:focus {
+.client-list .client-list__link:hover, .client-list .client-list__link:focus {
   border-color: #2196f3;
   color: #2196f3;
 }
 
-.client-list__icon {
+.client-list .client-list__icon {
   fill: currentColor;
 }
 
@@ -932,11 +933,11 @@ ul {
   margin-top: 20px;
 }
 
-.address__item:not(:last-child) {
+.address .address__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.address__link {
+.address .address__link {
   text-decoration: none;
   font-style: normal;
   line-height: 1.71;
@@ -945,11 +946,11 @@ ul {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.address__link:hover, .address__link:focus {
+.address .address__link:hover, .address .address__link:focus {
   color: #2196f3;
 }
 
-.address__link--general {
+.address .address__link--general {
   color: #ffffff;
 }
 
