--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,15 +1,16 @@
 .features {
     padding-top: 94px;
-    &__list {
+
+    .features__list {
         display: flex;
     }
-    &__item {
+    .features__item {
         width: 270px;
         &:not(:last-child) {
             margin-right: 30px;
         }
     }
-    &__logo {
+    .features__logo {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -19,14 +20,14 @@
         border-radius: 4px;
         margin-bottom: 30px;
     }
-    &__title {
+    .features__title {
         margin-bottom: 10px;
         font-size: 14px;
         color: $mainTitleColor;
         font-weight: 700;
         text-transform: uppercase;
     }
-    &__text {
+    .features__text {
         line-height: 1.71;
     }
 }
