--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -12,7 +12,7 @@
     background-repeat: no-repeat;
     background-position: center;
 
-    &__title {
+    .hero__title {
         margin: 0 auto 30px auto;
 
         color: $generalColor;
